rest docs add